--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -41,6 +41,47 @@
       },
       "providerPlugin": "awscloudformation",
       "service": "Cognito"
+    },
+    "userPoolGroups": {
+      "dependsOn": [
+        {
+          "attributes": [
+            "UserPoolId",
+            "AppClientIDWeb",
+            "AppClientID",
+            "IdentityPoolId"
+          ],
+          "category": "auth",
+          "resourceName": "chy32635d0a"
+        }
+      ],
+      "providerPlugin": "awscloudformation",
+      "service": "Cognito-UserPool-Groups"
+    }
+  },
+  "function": {
+    "preSignUp": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda"
+    }
+  },
+  "parameters": {
+    "AMPLIFY_function_preSignUp_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "preSignUp"
+        }
+      ]
+    },
+    "AMPLIFY_function_preSignUp_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "preSignUp"
+        }
+      ]
     }
   },
   "storage": {
