--- a/package.json
+++ b/package.json
@@ -20,7 +20,13 @@
     "@testing-library/user-event": "^13.5.0",
     "amazon-cognito-identity-js": "^6.3.6",
     "aws-amplify": "^5.3.11",
+    "axios": "^1.6.2",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "firebase": "^10.5.0",
+    "nodemon": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.2",
@@ -29,14 +35,19 @@
     "react-router-dom": "^6.16.0",
     "react-scripts": "^5.0.1",
     "react-slick": "^0.29.0",
+    "react-stripe-checkout": "^2.6.3",
     "slick-carousel": "^1.8.1",
+    "stripe": "^14.5.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "servert": "nodemon server.js"
+
+    
   },
   "eslintConfig": {
     "extends": [
