--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@mui/icons-material": "^5.14.9",
     "@mui/material": "^5.14.10",
     "@mui/system": "^5.14.11",
+    "@paypal/react-paypal-js": "^8.1.3",
     "@react-native-async-storage/async-storage": "^1.19.3",
     "@react-native-community/netinfo": "^9.4.1",
     "@react-native-firebase/app": "^18.5.0",
+    "@square/web-sdk": "^2.0.1",
     "@stripe/react-stripe-js": "^2.3.0",
     "@stripe/stripe-js": "^2.1.6",
     "@testing-library/jest-dom": "^5.17.0",
@@ -26,6 +28,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "firebase": "^10.5.0",
+    "next-transpile-modules": "^10.0.1",
     "nodemon": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -35,8 +38,10 @@
     "react-router-dom": "^6.16.0",
     "react-scripts": "^5.0.1",
     "react-slick": "^0.29.0",
+    "react-square-web-payments-sdk": "^3.2.1",
     "react-stripe-checkout": "^2.6.3",
     "slick-carousel": "^1.8.1",
+    "square": "^33.0.0",
     "stripe": "^14.5.0",
     "web-vitals": "^2.1.4"
   },
@@ -46,8 +51,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "servert": "nodemon server.js"
-
-    
   },
   "eslintConfig": {
     "extends": [
